--- a/templates/notice-purge-error.twig
+++ b/templates/notice-purge-error.twig
@@ -1,3 +1,3 @@
 <div class="error notice is-dismissible">
-	<p><strong>Error:</strong> Unable to purge {{ __( error, 'asse-akamai' ) }}</p>
+	<p><strong>Error:</strong> Unable to purge {{ __( error, 'asse-http' ) }}</p>
 </div>
